@@ -23,6 +23,10 @@
 ### IIS
 
  * Renamed `Add-IisServerManagerMembers` to [Add-IisServerManagerMembers](http://get-carbon.org/help/Add-IisServerManagerMembers.html), with backwards-compatible alias.
+ 
+### Internet Explorer
+
+ * Renamed `Enable-IEActivationPermissions` to [Enable-IEActivationPermission](http://get-carbon.org/help/Enable-IEActivationPermission.html), with backwards-compatible alias.
 
  
 # 0.5.0.0 (7 January 2013)
